--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <!-- Title Page -->  
-    <title>Pokedex</title>
+    <title>Login</title>
  
     <!-- CSS -->
     <link rel="stylesheet" type="text/css" href="css/style.css">
@@ -20,22 +20,14 @@
 
     <h1>POKEDEX</h1>
     <section class="login">
-    <input class="controls" type="text" name="Usuario" value="" placeholder="Usuario">
-    <input class="controls" type="password" name="Password" value="" placeholder="Password">
+    <input class="controls" type="text" name="" id="Usuario" placeholder="Usuario">
+    <input class="controls" type="password" name="" id="Password" placeholder="Password">
 
     </section>
 
-  
-    <button onClick="entrar()">INGRESAR</button>
+   
+    <button onClick="ingresar()">INGRESAR</button>
     <!-- JS -->
-    <script type="text/javascript" src="JS/saludo.js"></script>
-    <script type="text/javascript" src="JS/login.js"></script>
+    <script type="text/javascript" src="JavaScript/login.js"></script>
 </body>
-</html>
-
-
-
-
-
-
 </html>
