--- a/Frontend/HTML/Home.html
+++ b/Frontend/HTML/Home.html
@@ -2,10 +2,14 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Home</title>
+    <link rel="stylesheet" type="text/css" href="../CSS/stylehome.css">
 </head>
 <body>
-    <h3>Nombre del usuario</h3>
+    <div class="pokemon_container">
+        
+    </div>
+    <script src="../JavaScript/home.js" > </script>
 </body>
 </html>
