--- a/Frontend/HTML/Home.html
+++ b/Frontend/HTML/Home.html
@@ -10,30 +10,30 @@
 </head>
 <body>
     <div class="NameUser" id="NameUser">
-    </div>
-
-
-    <div class="Searchbox">
-    <input  type="text" class="input" name=""  placeholder="Nombre o número">
-    <button class="button">BUSCAR</button>
-    </div>
-
-
-    <div class="dropdown">
-        <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
-          Dropdown button
-        </button>
-        <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-          <li><a class="dropdown-item" href="#">Action</a></li>
-          <li><a class="dropdown-item" href="#">Another action</a></li>
-          <li><a class="dropdown-item" href="#">Something else here</a></li>
-        </ul>
-      </div>
       
-    <div class="pokemon_container">
+    </div>
+    <div class="search_tools">
+      <input  type="text" class="input" name="" id="Pokemon" placeholder="Nombre">
+      <button class="button" onclick="pokemonbyname();">BUSCAR</button>
+      <input  type="text" class="input" name="" id="Pokemon2" placeholder="Número">
+      <button class="button" onclick="pokemonbynumber(); ">BUSCAR</button>
+                 <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
+                  TIPO
+                  </button>
+                  <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
+                  <li><a class="dropdown-item" href="#">Action</a></li>
+                  <li><a class="dropdown-item" href="#">Another action</a></li>
+                  <li><a class="dropdown-item" href="#">Something else here</a></li>
+                  </ul>
+    </div>
+
+
+    <div class="pokemon_container" id="pokemon_container">
     </div>
 
     
     <script src="../JavaScript/home.js" > </script>
+    <script type="text/javascript" src="../JavaScript/pokemonbyname.js"></script>
+    <script type="text/javascript" src="../JavaScript/pokemonbynumber.js"></script>
 </body>
 </html>
